--- a/source/user_guide/basic_capabilities/predictions.ipynb
+++ b/source/user_guide/basic_capabilities/predictions.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/source/_assets/vehicles.csv\")\n",
+    "df = pd.read_csv(\"../../_assets/vehicles.csv\")\n",
     "df = df.drop(['Make', 'Model'], axis=1)\n",
     "print(df.describe())"
    ]
