--- a/source/user_guide/basic_capabilities/derived_features.ipynb
+++ b/source/user_guide/basic_capabilities/derived_features.ipynb
@@ -180,7 +180,7 @@
    "outputs": [],
    "source": [
     "reaction = trainee.react(\n",
-    "    contexts=df[features.get_names(without=[\"hours-per-week\", \"hours-per-year\"])],\n",
+    "    contexts=df[features.get_names(without=[\"hours-per-week\"])],\n",
     "    action_features=[\"hours-per-week\", \"hours-per-year\"],\n",
     "    derived_action_features=[\"hours-per-year\"],\n",
     ")\n",
