--- a/source/user_guide/basic_capabilities/basic_workflow.ipynb
+++ b/source/user_guide/basic_capabilities/basic_workflow.ipynb
@@ -96,7 +96,7 @@
     "df = fetch_data('adult').sample(1_000)\n",
     "features = infer_feature_attributes(df)\n",
     "\n",
-    "print(features.to_dataframe())"
+    "features.to_dataframe()"
    ]
   },
   {
@@ -164,7 +164,7 @@
     "    action_feature=\"target\",\n",
     "    details={\"prediction_stats\": True},\n",
     ")\n",
-    "print(prediction_stats)"
+    "prediction_stats"
    ]
   },
   {
