--- a/source/user_guide/basic_capabilities/derived_features.ipynb
+++ b/source/user_guide/basic_capabilities/derived_features.ipynb
@@ -104,12 +104,12 @@
     "}\n",
     "features[\"hours-per-year\"] = hpy_features\n",
     "\n",
-    "print(features.to_dataframe())\n",
-    "\n",
     "client = get_client()\n",
     "trainee = Trainee(features=features)\n",
     "trainee.train(df)\n",
-    "trainee.analyze()"
+    "trainee.analyze()\n",
+    "\n",
+    "features.to_dataframe()"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "    derived_context_features=[\"hours-per-year\"],\n",
     "    action_features=[\"target\"]\n",
     ")\n",
-    "print(reaction[\"action\"])"
+    "reaction[\"action\"]"
    ]
   },
   {
