--- a/source/user_guide/basic_capabilities/predictions.ipynb
+++ b/source/user_guide/basic_capabilities/predictions.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "df = pd.read_csv(\"../../_assets/vehicles.csv\")\n",
     "df = df.drop(['Make', 'Model'], axis=1)\n",
-    "print(df.describe())"
+    "df.describe()"
    ]
   },
   {
