--- a/source/user_guide/basic_capabilities/residuals.ipynb
+++ b/source/user_guide/basic_capabilities/residuals.ipynb
@@ -65,11 +65,11 @@
     "df = fetch_data('adult').sample(1_000)\n",
     "features = infer_feature_attributes(df)\n",
     "\n",
-    "print(features.to_dataframe())\n",
-    "\n",
     "trainee = Trainee(features=features)\n",
     "trainee.train(df)\n",
-    "trainee.analyze()"
+    "trainee.analyze()\n",
+    "\n",
+    "features.to_dataframe()"
    ]
   },
   {
@@ -105,7 +105,7 @@
     ")\n",
     "\n",
     "residuals = results['details']['feature_full_residuals_for_case']\n",
-    "print(residuals)"
+    "residuals"
    ]
   },
   {
@@ -134,7 +134,7 @@
     "residuals = trainee.react_aggregate(\n",
     "    details={'feature_full_residuals': True},\n",
     ")\n",
-    "print(residuals)"
+    "residuals"
    ]
   },
   {
