--- a/source/user_guide/basic_capabilities/predictions.ipynb
+++ b/source/user_guide/basic_capabilities/predictions.ipynb
@@ -112,9 +112,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CityMPG</th>\n",
+       "      <th>HighwayMPG</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>PassengerVolume</th>\n",
+       "      <th>LuggageVolume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>23606.000000</td>\n",
+       "      <td>23606.000000</td>\n",
+       "      <td>23606.000000</td>\n",
+       "      <td>23606.000000</td>\n",
+       "      <td>23606.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>20.612683</td>\n",
+       "      <td>27.742481</td>\n",
+       "      <td>2002.669067</td>\n",
+       "      <td>91.378633</td>\n",
+       "      <td>16.023850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10.013758</td>\n",
+       "      <td>8.719808</td>\n",
+       "      <td>11.749509</td>\n",
+       "      <td>11.229488</td>\n",
+       "      <td>7.980971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1984.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>1992.000000</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>2004.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>133.000000</td>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>195.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            CityMPG    HighwayMPG          Year  PassengerVolume  \\\n",
+       "count  23606.000000  23606.000000  23606.000000     23606.000000   \n",
+       "mean      20.612683     27.742481   2002.669067        91.378633   \n",
+       "std       10.013758      8.719808     11.749509        11.229488   \n",
+       "min        6.000000      9.000000   1984.000000         1.000000   \n",
+       "25%       17.000000     24.000000   1992.000000        85.000000   \n",
+       "50%       19.000000     26.000000   2004.000000        91.000000   \n",
+       "75%       22.000000     30.000000   2013.000000        98.000000   \n",
+       "max      150.000000    133.000000   2022.000000       195.000000   \n",
+       "\n",
+       "       LuggageVolume  \n",
+       "count   23606.000000  \n",
+       "mean       16.023850  \n",
+       "std         7.980971  \n",
+       "min         1.000000  \n",
+       "25%        12.000000  \n",
+       "50%        14.000000  \n",
+       "75%        17.000000  \n",
+       "max        55.000000  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"../../_assets/vehicles.csv\")\n",
     "df = df.drop(['Make', 'Model'], axis=1)\n",
@@ -197,18 +321,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HighwayMPG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mae</th>\n",
+       "      <td>1.080009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r2</th>\n",
+       "      <td>0.973041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rmse</th>\n",
+       "      <td>1.453207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>spearman_coeff</th>\n",
+       "      <td>0.939645</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                HighwayMPG\n",
+       "mae               1.080009\n",
+       "r2                0.973041\n",
+       "rmse              1.453207\n",
+       "spearman_coeff    0.939645"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Recommended metrics\n",
     "stats = trainee.react_aggregate(\n",
-    "    action_feature=\"HighwayMPG\",\n",
+    "    action_features=[\"HighwayMPG\"],\n",
     "    details={\n",
     "        'prediction_stats': True,\n",
     "        'selected_prediction_stats': ['rmse', 'spearman_coeff', 'r2', 'mae']\n",
     "    }\n",
-    ")\n",
+    ").to_dataframe()\n",
     "stats"
    ]
   },
@@ -225,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +427,7 @@
     "    test_case,\n",
     "    action_features=[\"HighwayMPG\"],\n",
     "    context_features=features.get_names(without=[\"HighwayMPG\"]),\n",
-    ")  "
+    ")"
    ]
   },
   {
@@ -263,9 +445,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HighwayMPG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   HighwayMPG\n",
+       "0          29"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result['action']"
    ]
@@ -289,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "docs-3.12",
+   "display_name": "doc_313",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
