--- a/source/user_guide/basic_capabilities/residuals.ipynb
+++ b/source/user_guide/basic_capabilities/residuals.ipynb
@@ -133,7 +133,7 @@
     "# Get global full residuals\n",
     "residuals = trainee.react_aggregate(\n",
     "    details={'feature_full_residuals': True},\n",
-    ")\n",
+    ").to_dataframe()\n",
     "residuals"
    ]
   },
@@ -159,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "docs-3.12",
+   "display_name": "doc_313",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
