24515: Refactors custom code

--- a/source/user_guide/basic_capabilities/derived_features.ipynb
+++ b/source/user_guide/basic_capabilities/derived_features.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "vscode": {
+     "languageId": "raw"
+    }
    },
    "source": [
     ".. currentmodule:: howso.engine\n",
@@ -57,7 +60,7 @@
     "\n",
     ".. code-block::\n",
     "\n",
-    "   (* #hours-per-week 0 52)\n",
+    "   (* (call value {feature \"hours-per-week\"}) 52)\n",
     "\n",
     "\n",
     "This would use the multiplication opcode (``*``) to derive a feature that is 52 times the ``\"hours-per-week\"`` feature for each case.\n",
@@ -65,10 +68,9 @@
     "\n",
     ".. note::\n",
     "\n",
-    "    When referencing feature values in a derived feature code (e.g., ``#hours-per-week 0``) the value returned is offset by the number\n",
-    "    which follows the reference.  When not using a time-series Trainee, this value can only be 0.  If you are using a time-series Trainee,\n",
-    "    however, this value can be larger which will then refer to that many cases previously in the time-series (e.g., ``#hours-per-week 1``\n",
-    "    would refer to the previous case in a time-series, if it were part of a time-series).\n",
+    "    When you are using a time-series Trainee, referencing feature values in a derived feature code refers to the value in the current case\n",
+    "    (e.g., ``(call value {feature \"hours-per-week\"})``) but the value returned may be offset to refer to that many cases previously in the\n",
+    "    time-series (e.g., ``(call value {feature \"hours-per-week\" lag 1})`` would refer to the previous case in a time-series, if it were part of a time-series).\n",
     "\n",
     "\n",
     "How-To Guide\n",
@@ -100,7 +102,7 @@
     "features = infer_feature_attributes(df)\n",
     "hpy_features = {\n",
     "    \"type\": \"continuous\",\n",
-    "    \"auto_derive_on_train\": {\"code\": \"(* #hours-per-week 0 52)\"},\n",
+    "    \"auto_derive_on_train\": {\"code\": \"(* (call value {feature \\\"hours-per-week\\\"}) 52)\"},\n",
     "}\n",
     "features[\"hours-per-year\"] = hpy_features\n",
     "\n",
@@ -127,14 +129,14 @@
     "\n",
     "    hpy_features = {\n",
     "        \"type\": \"continuous\",\n",
-    "        \"auto_derive_on_train\": {\"code\": \"(* #hours-per-week 0 52)\"}\n",
+    "        \"auto_derive_on_train\": {\"code\": \"(* (call value {feature \\\"hours-per-week\\\"}) 52)\"}\n",
     "    }\n",
     "\n",
     "First, we note that this feature is continuous.  Second, we set this feature to be auto-derived on train.  This means that the feature will be computed\n",
     "using its derived feature code as soon as cases are trained into the model.  If we did not do this, we would have to manually specify it in the ``derived_features``\n",
     "parameter to :meth:`Trainee.train` to ensure that the feature is created by the :class:`~Trainee`.  Finally, we set the derived feature code.  This is a\n",
     "small piece of Amalgam-like code which determines how to derive the feature.  In this case, we use the multiplication opcode (``*``) to multiply each case's\n",
-    "value of hours-per-week (``#hours-per-week 0``, where the 0 is an offset and means the current case) by 52, the number of weeks in a year.\n",
+    "value of hours-per-week (``(call value {feature \"hours-per-week\"})``, not specifying lag means the current case) by 52, the number of weeks in a year.\n",
     "\n",
     "\n",
     "Adding Derived Features After Training\n",
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +159,7 @@
     "\n",
     "hpy_features = {\n",
     "    \"type\": \"continuous\",\n",
-    "    \"auto_derive_on_train\": {\"code\": \"(* #hours-per-week 0 52)\"},\n",
+    "    \"auto_derive_on_train\": {\"code\": \"(* (call value {feature \\\"hours-per-week\\\"}) 52)\"},\n",
     "}\n",
     "trainee.add_feature(\"hours-per-year\", feature_attributes=hpy_features)"
    ]
